<resources>
    <string name="app_name">try</string>
    <!-- -->

    <!-- 主页 -->
    <string name="game_topic">狼人杀辅助系统</string>
    <string name="play">游戏开局</string>
    <string name="identity_setting_topic">身份配置</string>
    <string name="player_setting">玩家配置</string>
    <string name="copyright">SCNU凌绍彬</string>

    <!-- 玩家名称配置页面 -->
    <string name="enter_name_des">此处输入玩家姓名，并按下确定</string>
    <string name="players_list_current">当前名单</string>

    <!-- 身份配置页面 -->
    <string name="identity">输入身份</string>
    <string name="identity_amount">输入数量</string>

    <!-- 两个页面都用到 -->
    <string name="current_setting">当前配置</string>
    <string name="yes">确定</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 游戏页面 -->
    <!-- 最下面的按钮栏 -->
    <string name="no">取消</string>
    <string name="candidate">当前未选中玩家</string>
    <!-- 最上面的公告栏 -->
    <string name="game_notice_board">公告栏:点击确定开始游戏</string>
    <string name="time">游戏准备</string>

    <string name="text_rule">根据公告栏的游戏进程安排，通过点击\'玩家名称\'后\'确定\'。此处可测试功能。点击确定开始游戏！</string>
    <string name="text_night">夜晚请闭眼</string>
    <string name="text_wolf">狼人请睁眼，指出你要刀的人，狼人请闭眼</string>
    <string name="text_guard">守卫请睁眼，今晚你守卫哪个人。好的，守卫请闭眼</string>
    <string name="text_witch">女巫，你手中有一瓶毒药，要毒谁？好的，女巫请闭眼</string>
    <string name="text_prophet">预言家请睁眼，选择一位玩家查验身份。他的身份是这个，预言家请闭眼。（任意按键跳过该阶段）</string>
    <string name="text_daytime">白天。点击玩家名称并\'确定\'，则该玩家淘汰出局。点击\'取消\'，则进入黑夜</string>


    <!--
    <string name="text_white_wolf">白狼王自爆（点击玩家名称后\'确定\'则该玩家被带走，若仅是误触，则点击下一阶段）</string>
    <string name="text_hunter">猎人带走（点击玩家名称后\'确定\'则该玩家被带走，若仅是误触，则点击下一阶段）</string>
    <string name="text_exile">放逐（点击玩家名称后\'确定\'则该玩家被放逐，若仅是误触，则点击下一阶段）</string>
    -->

    <!-- 给玩家的通知 -->
    <string name="no_picked_player">未选中玩家</string>
    <string name="invalid_picking_player">玩家选中无效</string>
    <string name="game_on">游戏开始</string>
    <string name="guards_dead">守卫已出局</string>
    <string name="wolf_lose">狼人输了</string>
    <string name="no_cure">女巫没解药了，下一个环节</string>
    <string name="no_poison">女巫不能用毒药</string>
    <string name="exit">淘汰成功</string>
    <string name="good_win">好人阵营胜利</string>
    <string name="bad_win">狼人阵营胜利</string>
    <string name="good_god_dead">神被屠边</string>
    <string name="good_people_dead">平民全死了</string>
    <string name="back">返回上一步</string>
    <string name="next_stage">下一阶段</string>
    <!-- -->



</resources>

    <!--
<string name=""></string>

        android:text="@string/"

-->