<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/topic_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/game_topic"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/play"
        android:layout_width="240dp"
        android:layout_height="125dp"
        android:layout_marginTop="32dp"
        android:text="@string/play"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_name" />

    <Button
        android:id="@+id/identity_setting"
        android:layout_width="240dp"
        android:layout_height="125dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/identity_setting_topic"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/play"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/play"
        app:layout_constraintTop_toBottomOf="@+id/play" />

    <Button
        android:id="@+id/players_list"
        android:layout_width="240dp"
        android:layout_height="125dp"
        android:layout_marginTop="24dp"
        android:text="@string/player_setting"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/identity_setting"
        app:layout_constraintStart_toStartOf="@+id/identity_setting"
        app:layout_constraintTop_toBottomOf="@+id/identity_setting" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>